NCW-Terminal 1.0.4-beta19